<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>SpiralCraft</groupId>
  <artifactId>SpiralCraft</artifactId>
  <version>0.1.4-SNAPSHOT</version>
  <name>SpiralCraft</name>
  <description>Spiral Knights reimagined and remade in Minecraft.</description>
  <build>
    <sourceDirectory>src</sourceDirectory>
    <resources>
      <resource>
        <directory>src</directory>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>11</source>
          <target>11</target>
        </configuration>
      </plugin>
      <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <configuration>
              <source>15</source>
              <target>15</target>
              <compilerArgs>--enable-preview</compilerArgs>
          </configuration>
      </plugin>
      <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <configuration>
              <archive>
                  <manifest>
                      <addClasspath>true</addClasspath>
                      <classpathPrefix>lib/</classpathPrefix>
                  </manifest>
              </archive>
          </configuration>
      </plugin>
    </plugins>
  </build>
  <repositories>
  	<repository>
  		<id>spigot-repo</id>
  		<url>https://github.com/dmulloy2/ProtocolLib</url> <!--The URL was changed to github instead of the plugin build to work on 1.16-->
  	</repository>
  	<repository>
  		<id>enginehub-maven</id>
  		<url>http://maven.enginehub.org/repo/</url>
  	</repository>
    <repository>
        <id>dmulloy2-repo</id>
        <url>https://repo.dmulloy2.net/nexus/repository/public/</url>
    </repository>
  </repositories>
  <dependencies>
  	<dependency>
  		<groupId>org.spigotmc</groupId>
  		<artifactId>spigot-api</artifactId>
  		<version>1.16.3-R0.1-SNAPSHOT</version>
  		<scope>provided</scope>
  	</dependency>
  	<dependency>
  		<groupId>org.spigotmc</groupId>
        <artifactId>spigot</artifactId>
        <version>1.16.3-R0.1-SNAPSHOT</version>
        <scope>provided</scope>
  	</dependency>
  	<dependency>
  		<groupId>com.sk89q.worldedit</groupId>
  		<artifactId>worldedit-bukkit</artifactId>
  		<version>7.2.0-SNAPSHOT</version>
  		<scope>provided</scope>
  	</dependency>
    <dependency>
        <groupId>com.comphenix.protocol</groupId>
        <artifactId>ProtocolLib</artifactId>
        <version>4.6.0-SNAPSHOT</version>
    </dependency>
    <dependency>
        <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
        <groupId>org.postgresql</groupId>
        <artifactId>postgresql</artifactId>
        <version>42.2.18</version>
    </dependency>
  </dependencies>
</project>